// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component is renderer 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Open Filter
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Open Filter
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App component should be show WigetFilter after pressed button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="ant-scrolling-effect"
    style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
  >
    <div>
      <button
        ant-click-animating-without-extra-node="false"
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Open Filter
        </span>
      </button>
    </div>
    <div>
      <div
        class="ant-modal-root"
      >
        <div
          class="ant-modal-wrap ant-design-draggable-modal"
          style="z-index: 2;"
          tabindex="-1"
        >
          <div
            aria-labelledby="test-id"
            aria-modal="true"
            class="ant-modal"
            role="dialog"
            style="margin: 0px; padding-bottom: 0px; pointer-events: auto; top: 0px; left: 112px; height: 768px; width: 800px;"
          >
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-header"
              >
                <div
                  class="ant-modal-title"
                  id="test-id"
                >
                  <div
                    class="ant-design-draggable-modal-title"
                  >
                    FILTERS
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-body"
              >
                <h2>
                  CONTEXTS
                </h2>
                <div
                  class="rw-multiselect rw-widget"
                  data-intent="mouse"
                  tabindex="-1"
                >
                  <div
                    class="rw-widget-input rw-widget-picker rw-widget-container"
                  >
                    <div
                      aria-label="Selected items"
                      aria-multiselectable="true"
                      aria-orientation="horizontal"
                      class="rw-multiselect-taglist"
                      id="rw_2_taglist"
                      role="listbox"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-busy="false"
                        aria-controls="rw_3_listbox"
                        aria-disabled="false"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-owns="rw_3_listbox "
                        aria-readonly="false"
                        autocapitalize="off"
                        autocomplete="off"
                        class="rw-multiselect-input"
                        placeholder=""
                        role="combobox"
                        size="2"
                        spellcheck="false"
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <span
                      aria-hidden="true"
                      class="rw-btn rw-picker-caret"
                    />
                  </div>
                </div>
                <div
                  class="ant-design-draggable-modal-resize-handle"
                >
                  <div
                    class="ant-design-draggable-modal-resize-handle-inner"
                  />
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <h2>
        CONTEXTS
      </h2>
      <div
        class="rw-multiselect rw-widget"
        data-intent="mouse"
        tabindex="-1"
      >
        <div
          class="rw-widget-input rw-widget-picker rw-widget-container"
        >
          <div
            aria-label="Selected items"
            aria-multiselectable="true"
            aria-orientation="horizontal"
            class="rw-multiselect-taglist"
            id="rw_8_taglist"
            role="listbox"
          >
            <input
              aria-autocomplete="list"
              aria-busy="false"
              aria-controls="rw_9_listbox"
              aria-disabled="false"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="rw_9_listbox "
              aria-readonly="false"
              autocapitalize="off"
              autocomplete="off"
              class="rw-multiselect-input"
              placeholder=""
              role="combobox"
              size="2"
              spellcheck="false"
              tabindex="0"
              value=""
            />
          </div>
          <span
            aria-hidden="true"
            class="rw-btn rw-picker-caret"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h2>
      CONTEXTS
    </h2>
    <div
      class="rw-multiselect rw-widget"
      data-intent="mouse"
      tabindex="-1"
    >
      <div
        class="rw-widget-input rw-widget-picker rw-widget-container"
      >
        <div
          aria-label="Selected items"
          aria-multiselectable="true"
          aria-orientation="horizontal"
          class="rw-multiselect-taglist"
          id="rw_8_taglist"
          role="listbox"
        >
          <input
            aria-autocomplete="list"
            aria-busy="false"
            aria-controls="rw_9_listbox"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rw_9_listbox "
            aria-readonly="false"
            autocapitalize="off"
            autocomplete="off"
            class="rw-multiselect-input"
            placeholder=""
            role="combobox"
            size="2"
            spellcheck="false"
            tabindex="0"
            value=""
          />
        </div>
        <span
          aria-hidden="true"
          class="rw-btn rw-picker-caret"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
